* [Menu] Fixed default gaps between items

--- a/packages/jezvejs/src/Components/LinkMenu/LinkMenu.scss
+++ b/packages/jezvejs/src/Components/LinkMenu/LinkMenu.scss
@@ -1,7 +1,7 @@
 .link-menu {
   --menu-item-padding: 2px;
-  --menu-item-column-gap: 12px;
-  --menu-item-row-gap: 6px;
+  --menu-column-gap: 12px;
+  --menu-row-gap: 6px;
   --menu-item-gap: 6px;
   --menu-item-text-color: #0072c6;
   --menu-item-border-color: transparent;
