--- a/packages/jezvejs/src/Components/Menu/Menu.scss
+++ b/packages/jezvejs/src/Components/Menu/Menu.scss
@@ -1,8 +1,8 @@
 /* Menu container */
 .menu {
   /* Container */
-  --menu-column-gap: 12px;
-  --menu-row-gap: 6px;
+  --menu-column-gap: 0;
+  --menu-row-gap: 0;
 
   /* Items */
   --menu-item-padding: 0.5rem;
